--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-knobby",
+	"name": "svelte-knobby-jonhuang",
 	"version": "0.3.5",
 	"scripts": {
 		"dev": "svelte-kit dev",
@@ -9,8 +9,7 @@
 		"format": "prettier --write --plugin-search-dir=. .",
 		"package": "svelte-kit package",
 		"release": "npm run package && cd package && npm publish",
-		"postversion": "git push && git push --tags && npm run release",
-		"prepublishOnly": "echo \"Did you mean to run 'npm run release'?\" && exit 1"
+		"postversion": "git push && git push --tags && npm run release"
 	},
 	"devDependencies": {
 		"@sveltejs/kit": "^1.0.0-next.125",
